--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -7,6 +7,12 @@
     color: white;
     padding-top: 28px;
     padding-bottom: 24px;
+
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
 
 @media screen and (max-width: 767px) {
