--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     position: relative;
     display: flex;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 1279px) {
