--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,14 +3,16 @@
     line-height: 22px;
     text-align: center;
     margin: 32px auto 0;
-    width: 360px;
+    max-width: 360px;
+    width: 100%;
     z-index: 1;
+
 }
 
 @media screen and (max-width: 767px) {
     .cover__subtitle {
         font-size: 14px;
         line-height: 16px;
-        width: 288px;
+        max-width: 288px;
     }
 }
