--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -4,8 +4,10 @@
     line-height: 76px;
     text-align: center;
     margin: 0 auto;
-    width: 560px;
+    max-width: 560px;
+    width: 100%;
     z-index: 1;
+
 }
 
 
@@ -13,6 +15,6 @@
     .cover__title {
         font-size: 32px;
         line-height: 35px;
-        width: 288px;
+        max-width: 288px;
     }
 }
