--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,3 +3,8 @@
     line-height: 16px;
     margin: 0;
 }
+@media screen and (max-width: 767px) {
+    .footer__copyright {
+        line-height: 14px;
+    }
+}
