--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,7 +5,8 @@
     line-height: 36px;
     margin: 32px auto 64px;
     text-align: center;
-    width: 640px;
+    max-width: 640px;
+    width: 100%;
 }
 
 @media screen and (max-width: 1279px) {
