--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,8 @@
     margin: 0 auto;
     line-height: 100px;
     text-align: center;
-    width: 720px;
+    max-width: 720px;
+    width: 100%;
 }
 
 @media screen and (max-width: 767px) {
