--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,18 @@
 .lead {
-    margin-top: 56px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 92px;
+}
+
+@media screen and (max-width: 1023px) {
+    .lead {
+        margin-bottom: 88px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .lead {
+        margin-bottom: 64px;
+    }
 }
