--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
     font-size: 18px;
-    line-height: 163%;
+    line-height: 163%;  /* РАДИ БОГА ПОМОГИТЕ, я не могу никак для 320 сделать так, чтобы текст ложился ровно как в макете, при этом сохранив заданные отступы */
     margin: 0 0 26px;
 }
 
@@ -17,12 +17,6 @@
 @media screen and (max-width: 1023px) {
     .place__paragraph {
         font-size: 16px;
-        margin: 0 0 25px;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    .place__paragraph {
         margin: 0 0 25px;
     }
 }
