--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,6 +1,5 @@
 @media screen and (max-width: 767px) {
     .place__text {
-        padding-left: 5%;
-        padding-right: 5%;
+        padding: 0 16px;
     }
 }
