итерация 3 (финал дай бог)

--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
     font-size: 18px;
-    line-height: 163%;  /* РАДИ БОГА ПОМОГИТЕ, я не могу никак для 320 сделать так, чтобы текст ложился ровно как в макете, при этом сохранив заданные отступы */
+    line-height: 163%;
     margin: 0 0 26px;
 }
 
