--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,7 +4,7 @@
     line-height: 18px;
     text-decoration: none;
     transition: .2s;
-    margin: 0 18px 0 0;  /* Не понимаю, в чем проблема: вроде всё по брифу */
+    margin: 0 18px 0 0;
 }
 
 .footer__link:last-child {
