--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
     max-width: 1184px;
-    margin: 0 auto;
+    margin: 0 auto 56px;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -8,18 +8,18 @@
 
 @media screen and (max-width: 1279px) {
     .header {
-        margin: 0 48px;
+        margin: 0 48px 48px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .header {
-        margin: 0 24px;
+        margin: 0 24px 48px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .header {
-        margin: 0 16px;
+        margin: 0 16px 48px;
     }
 }
